--- a/AgendaTarefas/Views/Shared/Components/ListaTarefas/Default.cshtml
+++ b/AgendaTarefas/Views/Shared/Components/ListaTarefas/Default.cshtml
@@ -22,7 +22,7 @@
 
                         <div class="col-4">
                             <a asp-action="AtualizarTarefa" asp-route-tarefaId="@item.TarefaId" class="btn btn-sm btn-outline-primary rounded-circle"><i class="fa fa-pencil-square"></i></a>
-                            <a class="btn btn-sm btn-outline-danger rounded-circle"><i class="fa fa-times-circle"></i></a>
+                            <a class="btn btn-sm btn-outline-danger rounded-circle" onclick="ConfirmarExclusao(@item.TarefaId, '@item.Nome')"><i class="fa fa-times-circle"></i></a>
                         </div>
                     </div>
                 </li>
