--- a/AgendaTarefas/Views/Tarefas/Index.cshtml
+++ b/AgendaTarefas/Views/Tarefas/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Tarefas Cadastradas";
 }
 
-@foreach(var item in Model)
+@foreach (var item in Model)
 {
     <div class="accordion" id="painelTarefas">
         <div class="card">
@@ -12,23 +12,22 @@
                 <div class="row">
                     <div class="col-10">
                         <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#@item.Identificadores">
-                            @item.Data
+                            @item.Datas
                         </button>
                     </div>
                     <div class="col-2">
-                        <a asp-action="CriarTarefa" asp-route-dataTarefa="@item.Data" class="btn btn-sm btn-outline-dark">Nova Tarefa</a>
+                        <a asp-action="CriarTarefa" asp-route-dataTarefa="@item.Datas" class="btn btn-sm btn-outline-dark">Nova Tarefa</a>
                     </div>
                 </div>
             </div>
 
             <div id="@item.Identificadores" class="collapse show" data-parent="#painelTarefas">
                 <div class="card-body">
-                    @await Component.InvokeAsync("ListaTarefas", item.Data)
+                    @await Component.InvokeAsync("ListaTarefas", item.Datas)
                 </div>
             </div>
         </div>
     </div>
-        
 }
 
 <div class="modal" tabindex="-1">
@@ -36,44 +35,44 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Confirmação de Exclusão</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
-                <p>Prosseguir com a Exclusão? <text class="nomeTarefa"></text></p>
+                <p>Prosseguir com a exclusão da tarefa <text class="nomeTarefa"></text> ? </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-secondary btnFechar" data-bs-dismiss="modal">Não</button>
+                <button type="button" class="btn btn-outline-secondary btnFechar" data-dismiss="modal">Não</button>
                 <button type="button" class="btn btn-outline-danger btnExcluir">Sim</button>
             </div>
         </div>
     </div>
 </div>
 
-@section Scripts{ 
-<script>
-    function ConfirmarExclusao(tarefaId, nomeTarefa) {
-        $(".nomeTarefa").text(nomeTarefa);
-        $(".modal").modal();
+@section Scripts {
+    <script>
+        function ConfirmarExclusao(tarefaId, nomeTarefa) {
+            $(".nomeTarefa").text(nomeTarefa);
+            $(".modal").modal();
 
-        $(".btnExcluir").on('click', function () {
-            $.ajax({
-                url: 'Tarefas/ExcluirTarefa',
-                method: 'POST',
-                data: { tarefaId: tarefaId },
-                success: function (data) {
-                    $(".modal").modal('hide');
-                    location.reload(true);
-                }
-            })
-        })
+            $(".btnExcluir").on('click', function () {
+                $.ajax({
+                    url: 'Tarefas/ExcluirTarefa',
+                    method: 'POST',
+                    data: { tarefaId: tarefaId },
+                    success: function (data) {
+                        $(".modal").modal('hide');
+                        location.reload(true);
+                    }
+                });
+            });
 
-        $('.btnFechar').on('click', function () {
-            tarefaId = null;
-            nomeTarefa = null;
-            $(".modal").modal('hide');
-        });
-    }
-</script>
+            $('.btnFechar').on('click', function () {
+                tarefaId = null;
+                nomeTarefa = null;
+                $(".modal").modal('hide');
+            });
+        }
+    </script>
 }
-
-
